[tool.poetry]
name = "longcat-recorder"
version = "0.1.0"
description = ""
authors = ["Mark Meliksetyan <markmelix@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aiogram = "^3.1.0"
pynacl = "^1.5.0"
discord-py-self = {path = "/home/mark/code/forks/discord.py-self/dist/discord.py_self-2.1.0a4811+g4f2a6df9-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
