[tool.poetry]
name = "recordia"
version = "3.0.0"
description = "Discord voice channel user logging botkit"
authors = ["Mark Meliksetyan <markmelix@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "1.0.0"
aiogram = "3.1.0"
pynacl = "1.5.0"
discord-py-self = {git = "https://github.com/markmelix/discord.py-self.git", rev = "fdf8ff99c2c2f1e613c58e1d60db5c9ecb2f7482" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
